--- a/index.html
+++ b/index.html
@@ -1,53 +1,119 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
     <head>
-        <title>Accueil</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href="styles/style.css" rel="stylesheet" type="text/css">
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Accueil | Région Normandie</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="/styles/style.css">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
+        <meta name="description" content="La Normandie à besoin de vous : Nous lançons une opération à l'aide de l'IUT Grand Ouest Normandie sur l'accessibilité des personnes en situation de handicap aux lieux publics et sur les aides que nous pouvons vous offrir. Que vous soyez un Normand où un établissement reçevant du public, venez découvrir nos initiatives et les aides disponibles pour une inclusion complète"> 
+        <meta name="keywords" content="Handicap en Normandie, aides handicap, inclusion, IUT Grand Ouest Normandie, accessibilité, soutien aux handicapés, services handicap Normandie, sensibilisation handicap, établissements publics accessibles, ressources handicap">
+        <meta name="author" content="Zoé Margerie, Yvan Pouteau, Baptiste Gosselin"> 
+        <meta name="robots" content="index, follow"> 
+
+        <meta property="og:title" content="Handicap en Normandie - Accueil">
+        <meta property="og:description" content="La Normandie à besoin de vous : Nous lançons une opération à l'aide de l'IUT Grand Ouest Normandie sur l'accessibilité des personnes en situation de handicap aux lieux publics et sur les aides que nous pouvons vous offrir. Que vous soyez un Normand où un établissement reçevant du public, venez découvrir nos initiatives et les aides disponibles pour une inclusion complète.">
+        <meta property="og:image" content="/images/normandie-vertical.jpg">
+        <meta property="og:url" content="https://handicap.normandie.fr">
+        <meta property="og:type" content="website">
+
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="Handicap en Normandie - Accueil">
+        <meta name="twitter:description" content="La Normandie à besoin de vous : Nous lançons une opération à l'aide de l'IUT Grand Ouest Normandie sur l'accessibilité des personnes en situation de handicap aux lieux publics et sur les aides que nous pouvons vous offrir. Que vous soyez un Normand où un établissement reçevant du public, venez découvrir nos initiatives et les aides disponibles pour une inclusion complète.">
+        <meta name="twitter:image" content="/images/normandie-vertical.jpg">
+        <meta name="twitter:site" content="https://handicap.normandie.fr"> 
     </head>
     <body>
-        <header>
-            <div class="boite">
-                <img src="images/logo.svg" alt="logo Normandie">
-                <h1>Normandicap</h1>
-            </div>
-        </header>
-        <nav class="menu">
-            <ul class="nav nav-pills nav-fill">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Accueil</a></li>
-                <li class="nav-item"><a class="nav-link" href="handicap_en_fr.html">Handicap en France</a></li>
-                <li class="nav-item"><a class="nav-link" href="handicap_en_nor.html">Handicap en Normandie</a></li>
-                <li class="nav-item"><a class="nav-link" href="etablissement.html">Etablissement</a></li>
-                <li class="nav-item"><a class="nav-link" href="particulier.html">Particulier</a></li>    
-            </ul>
-        </nav>
-        <main>
-            <article>
-                <h3>Présentation du site</h3>
-                <p>
-                    Bienvenue sur notre site dédié à la situation des personnes en situation de handicap en Normandie. 
-                    Vous y trouverez une variété d'informations, de ressources et de témoignages sur la vie des personnes handicapées, 
-                    ainsi que sur les dispositifs d'accompagnement et de soutien disponibles dans la région. 
-                    Notre but est de vous offrir un accès facile et rapide aux informations essentielles concernant l'inclusion des 
-                    personnes handicapées en Normandie, que ce soit dans les domaines de l'emploi, de la mobilité, de l'éducation, des 
-                    soins ou des loisirs. Nous mettons à votre disposition des guides pratiques, des actualités locales et des conseils 
-                    utiles pour vous aider à mieux comprendre et à utiliser les services et aides disponibles. 
-                    Que vous soyez une personne en situation de handicap, un proche, un professionnel ou simplement un citoyen curieux, 
-                    notre site vise à promouvoir l'autonomie, la participation et l'inclusion de tous. Parcourez nos pages pour découvrir 
-                    comment vous pouvez vous informer, obtenir de l'aide ou vous engager pour une société plus inclusive en Normandie.
-                </p>
-            </article>
+        <div class="container">
+            <header>
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand normandie-logo" href="#">
+                            <img src="/images/normandie-logo.jpg" alt="Logo de la Normandie" class="normandie-logo-img">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                            <a class="nav-link" href="information_handicap.html">Le handicap</a>
+                            <a class="nav-link" href="eta_ou_psh_questionnaire.html">Les questionnaires</a>
+                            <a class="nav-link" href="eta_ou_psh_aides.html">Les aides</a>
+                            <a class="nav-link" href="https://handicap.gouv.fr/">Le site de l'État</a>
+                            </div>
+                        </div>
+                    </div>
+                 </nav>
+            </header>
+        </div>
+        <div class="container-fluid">
+            <video src="/videos/handicap-international.mp4" class="w-100 h-50v" muted autoplay loop></video>
+        </div>
 
-            <div class="block_liens savoir_plus"> <a href="handicap_en_fr.html">En savoir plus</a></div>
-            <div class="conteneur">
-                <div class="block_liens block_centres"> <a href="etablissement.html">Je suis un Établissement recevant du public</a></div>
-                <div class="block_liens block_centres"> <a href="particulier.html">Je suis un particulier</a></div>
-            </div>
-        </main>
-        <footer>
-            <p>@Pellerin-Milène, @Golliot-Camille, @Levoyer-Adrien, SAE1.456</p>
-            <a class="text-right" href ="sources.html">Sources</a>
-        </footer>
+        <div class="container">
+            <main>
+            <h1 class="h1"> Le handicap en Normandie </h1>
+                <div class="container">
+                    <h2 class="h2">Le site web</h2>
+                    <p>Le site web à pour but d'informer les administrés sur les différents handicaps ainsi que sur les aides disponibles.
+                    Le site à pour deuxième objectif d'informer les entreprises sur les aides disponibles, sur la législation en vigueur 
+                    et sur les aménagements réalisable pour les différents handicaps.
+                    </p>
+
+                    <h2 class="h2">Le but de l'étude</h2>
+                    <p>Cette étude se compose de deux questionnaires, un pour les administrés de la région Normandie, le second est destiné 
+                    aux entreprises situé en Normandie. L'étude à pour objectif de recenser les différents handicaps présents en Normandie, 
+                    de prendre en compte l'avis des personnes en situation de handicap concernant l'aménagement des infrastructure et des 
+                    difficultés rencontrés dans la vie quotidienne. Elle permet aussi de renseigner l'avis des personnes en situation de 
+                    handicap concernant les aides données en France. Le second questionnaire permettra de recenser les aménagements réalisés 
+                    par les entreprises et les freins rencontrés pour la mise en place des aménagements.
+                    </p>
+                </div>
+                <div class="row">
+                  <div class="col-sm-6 spaced-welcome">
+                     <div class="card">
+                        <div class="card-body">
+                           <h5 class="card-title">Vous êtes une entreprise?</h5>
+                           <p class="card-text">Faites un questionaire pour ERP</p>
+                           <a href="question_eta.html" class="btn btn-danger">Questionaire</a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-sm-6 spaced-welcome">
+                     <div class="card">
+                        <div class="card-body">
+                           <h5 class="card-title">Vous êtes en situation d'handicap?</h5>
+                           <p class="card-text">Faites un questionaire pour PSH</p>
+                           <a href="questionaire_PSH.html" class="btn btn-danger">Questionaire</a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </main>
+        </div>
+        <div class="container-fluid back-blue">
+            <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 border-top d-flex align-items-center justify-content-center">
+
+                <div class="col mb-3 d-flex flex-column align-items-center justify-content-center">
+                    <img src="/images/iut-gon.png" class="img-iut-gon" alt="logo de l'iut">
+                    <p><br>Fait à l'IUT de IFS par :<br><br>Zoé Margerie<br>Yvan Pouteau<br>Baptiste Gosselin<br><br>© Tous droits réservés<br><a href="source.html" class="text-danger">Nos sources</a></p>
+                </div>
+            
+                <div class="col mb-3 d-flex flex-column align-items-center justify-content-center">
+                    <h5 class="h5">Site de Caen :</h5>
+                    <p>Abbaye-aux-Dames <br>Place Reine Mathilde <br>CS 50523 <br>14035 Caen Cedex 1 <br> France <br><br> Accueil du Lundi au Vendredi<br>De 8h à 12h30 et de 13h30 à 18h</p>
+                </div>
+                <div class="col mb-3 d-flex flex-column align-items-center justify-content-center">
+                    <h5 class="h5">Site de Rouen :</h5>
+                    <p>Abbaye-aux-Dames <br>5, rue Robert Schuman <br>CS 21129 <br>76174 Rouen Cedex <br> France <br><br> Accueil du Lundi au Vendredi<br>De 8h à 12h30 et de 13h30 à 18h</p>
+                </div>
+            </footer>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     </body>
-</html>
+</html> 
